2002-09-03  Gary Thomas  <gary@mlbassoc.com>

	* src/ts1000.S: 
	* src/hal_diag.c: 
	* src/hal_aux.c: 
	* include/pkgconf/mlt_powerpc_ts1000_romram.mlt: 
	* include/pkgconf/mlt_powerpc_ts1000_romram.ldi: 
	* include/pkgconf/mlt_powerpc_ts1000_romram.h: 
	* include/pkgconf/mlt_powerpc_ts1000_rom.mlt: 
	* include/pkgconf/mlt_powerpc_ts1000_rom.ldi: 
	* include/pkgconf/mlt_powerpc_ts1000_rom.h: 
	* include/pkgconf/mlt_powerpc_ts1000_ram.mlt: 
	* include/pkgconf/mlt_powerpc_ts1000_ram.ldi: 
	* include/pkgconf/mlt_powerpc_ts1000_ram.h: 
	* include/plf_stub.h: 
	* include/plf_regs.h: 
	* include/plf_intr.h: 
	* include/plf_cache.h: 
	* include/hal_diag.h: 
	* cdl/hal_powerpc_ts1000.cdl: New platform - Allied Telesyn TS1000.

//===========================================================================
//####ECOSGPLCOPYRIGHTBEGIN####
// -------------------------------------------
// This file is part of eCos, the Embedded Configurable Operating System.
// Copyright (C) 1998, 1999, 2000, 2001, 2002 Red Hat, Inc.
//
// eCos is free software; you can redistribute it and/or modify it under
// the terms of the GNU General Public License as published by the Free
// Software Foundation; either version 2 or (at your option) any later version.
//
// eCos is distributed in the hope that it will be useful, but WITHOUT ANY
// WARRANTY; without even the implied warranty of MERCHANTABILITY or
// FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
// for more details.
//
// You should have received a copy of the GNU General Public License along
// with eCos; if not, write to the Free Software Foundation, Inc.,
// 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA.
//
// As a special exception, if other files instantiate templates or use macros
// or inline functions from this file, or you compile this file and link it
// with other works to produce a work based on this file, this file does not